[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/UI/textFrame.png" type="Texture" id=1]
[ext_resource path="res://common/UI/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://Screens/OptionButton/MatchCustomization/PlayerList.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/OptionButton/MatchCustomization/OptionsList.tscn" type="PackedScene" id=4]
[ext_resource path="res://Screens/OptionButton/MatchCustomization/MatchCustomization.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "loading_transition"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 2.8, 3 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LoadingRect:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5, 2.5, 2.7 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LoadingRect/MarginContainer/VBoxContainer/ProgressBar:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 100.0, 100.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "show_mode"
}, {
"args": [  ],
"method": "show_map"
}, {
"args": [  ],
"method": "show_size"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LoadingRect/MarginContainer/VBoxContainer/Label:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Loading" ]
}

[sub_resource type="Animation" id=2]
length = 0.2

[node name="MatchCustomization" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -96.0
margin_right = 480.0
margin_bottom = 96.0
rect_min_size = Vector2( 960, 192 )
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 480, 96 )
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="LoadingRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingRect/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 944.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="LoadingRect/MarginContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 928.0
margin_bottom = 58.0
size_flags_vertical = 6
text = "Loading"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="LoadingRect/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 928.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -384.0
margin_right = 768.0
margin_bottom = 384.0
rect_min_size = Vector2( 1536, 768 )
rect_pivot_offset = Vector2( 768, 384 )
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainRect/VBoxContainer"]
margin_right = 1504.0
margin_bottom = 45.0
text = "Custom Game"
align = 1

[node name="HSeparator" type="HSeparator" parent="MainRect/VBoxContainer"]
margin_top = 61.0
margin_right = 1504.0
margin_bottom = 65.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainRect/VBoxContainer"]
margin_top = 81.0
margin_right = 1504.0
margin_bottom = 606.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerList" parent="MainRect/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 416.0
margin_bottom = 525.0

[node name="OptionsList" parent="MainRect/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_right = 1504.0
margin_bottom = 525.0

[node name="Button" type="Button" parent="MainRect/VBoxContainer"]
margin_left = 630.0
margin_top = 622.0
margin_right = 874.0
margin_bottom = 736.0
size_flags_horizontal = 4
text = "play game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/loading_transition = SubResource( 1 )
anims/select = SubResource( 2 )
